# Jornada_workshop_00

./: Dockerfile  README.md  duckdb.db  pyproject.toml
etl/: app.py  pipeline_01.py  pipeline_02.py
sql/: create_table.sql  create_table_calculado.sql
