[tool.poetry]
name = "jornada-workshop-00"
version = "0.1.0"
description = ""
authors = ["Mariangela Crispim <mmcrispim@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.1.0"
duckdb = "^0.10.1"
streamlit = "^1.33.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
